landin 3 price section complete

--- a/app/partials/pages/landing-3/_price.njk
+++ b/app/partials/pages/landing-3/_price.njk
@@ -1,102 +1,4 @@
 {% macro render(args) %}
-    {% import "components/pricings.njk" as Card %}
-{% set pricingOne = [
-    {
-    plan:"Starter",
-    planTextColor:"text-turquoise",
-    price:{
-        monthly:"$10",
-        yearly:"$20"
-    },
-    list:[
-        {
-            id:"1",
-            text:"10 GB Disk Space"
-        },
-        {
-            id:"1",
-            text:"1 Year Support"
-        },
-        {
-            id:"1",
-            text:"500 Queries"
-        },
-        {
-            id:"1",
-            text:"Basic Statistics"
-        },
-        {
-            id:"1",
-            text:"Free Custom Domain"
-        }
-    ]
-
-    },
-        {
-        active:true,
-        plan:"Basic",
-        planTextColor:"text-my-sin",
-        price:{
-            monthly:"$20",
-            yearly:"$50"
-        },
-        list:[
-            {
-            id:"1",
-            text:"10 GB Disk Space"
-        },
-            {
-            id:"1",
-            text:"1 Year Support"
-        },
-            {
-            id:"1",
-            text:"500 Queries"
-        },
-            {
-            id:"1",
-            text:"Basic Statistics"
-        },
-            {
-            id:"1",
-            text:"Free Custom Domain"
-        }
-        ]
-
-    },
-        {
-        plan:"Premium",
-        planTextColor:"text-rose",
-        price:{
-            monthly:"$30",
-            yearly:"$60"
-        },
-        list:[
-            {
-            id:"1",
-            text:"10 GB Disk Space"
-        },
-            {
-            id:"1",
-            text:"1 Year Support"
-        },
-            {
-            id:"1",
-            text:"500 Queries"
-        },
-            {
-            id:"1",
-            text:"Basic Statistics"
-        },
-            {
-            id:"1",
-            text:"Free Custom Domain"
-        }
-        ]
-
-    }
-
-] %}
 <div class="pricing-section-01">
     <div class="container">
         <div class="row justify-content-center">
@@ -104,28 +6,251 @@
                 <h6 class="subtitle text-primary mb-10">Pricing PLan</h6>
                 <h2 class="title">Choose Your Pricing Plan</h2>
             </div>
-            <div class="pricing-section-01__pricing-trigger pricing-btn d-flex align-items-center justify-content-center flex-wrap">
-                <label class="mb-3 mb-lg-0">Annual</label>
-                <div class="toggle-btn form-check form-switch mb-3 mb-lg-0">
-                    <input class="form-check-input btn-toggle price-deck-trigger active" type="checkbox" id="flexSwitchCheckDefault" data-pricing-trigger="" data-target="#table-price-value" checked="">
-                </div>
-                <label class="mb-3 mb-lg-0">Monthly</label>
-            </div>
+            <div class="slideToggle">
+                <label class="form-switch">
+                  <span class="beforeinput text-success">
+                    Monthly
+                  </span>
+                  <input type="checkbox" id="js-contcheckbox">
+                  <i></i>
+                  <span class="afterinput">
+                    Annual
+                  </span>
+                </label>
+              </div>
         </div>
-        <div class="row pricing-section-01__wrapper" id="table-price-value"  data-pricing-dynamic data-value-active="monthly">
-            {% for item in pricingOne %}
-                <div class="col-lg-4">
-                    {{Card.One({
-                        active:item.active,
-                        modifier:"card-v2",
-                        plan:item.plan,
-                        planTextColor:item.planTextColor,
-                        price:item.price,
-                        list:item.list,
-                        btnClass:"btn-blue-ribbon--outline rounded-full"
-                    })}}
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-sm-8 col-xs-10 col-11">
+                <div class="row pricing-section-01__wrapper four-row-mobile-slider mobile-slider">
+                    <div class="col-xxl-3 col-xl-4">
+                        <div class="pricingtable">
+                            <div class="price-head">
+                                <div class="price-head__text">
+                                    <h6>Intro</h6>
+                                </div>
+                            </div>
+                            <ul class="list-group list-unstyled">
+                                <li>
+                                    <span>
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Workspace Table view</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited storage up to (10MB/file)</li>
+                                <li class="disable"> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> 1 Power-Up per board</li>
+                                <li class="disable"> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited activity log</li>
+                                <li class="disable"> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Advanced checklists</li>
+                                <li class="pricingtable__highlight js-montlypricing">$<span>50</span>/Month</li>
+                                <li class="pricingtable__highlight js-yearlypricing">$<span>100</span>/Yearly</li>
+                            <li class="pricingtable__btn">
+                              <button class="btn btn-outline-primary w-100">
+                                Choose Now
+                                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                              </button>
+                            </li>
+                          </ul>
+                          </div>
+                    </div>
+                    <div class="col-xxl-3 col-xl-4">
+                        <div class="pricingtable">
+                            <div class="price-head">
+                                <div class="price-head__text">
+                                    <h6>Base</h6>
+                                </div>
+                            </div>
+                            <ul class="list-group list-unstyled">
+                                <li>
+                                    <span>
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Workspace Table view</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited storage up to (10MB/file)</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> 1 Power-Up per board</li>
+                                <li class="disable"> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited activity log</li>
+                                <li class="disable"> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Advanced checklists</li>
+                                <li class="pricingtable__highlight js-montlypricing">$<span>100</span>/Month</li>
+                                <li class="pricingtable__highlight js-yearlypricing">$<span>200</span>/Yearly</li>
+                            <li class="pricingtable__btn">
+                              <button class="btn btn-outline-primary w-100">
+                                Choose Now
+                                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                              </button>
+                            </li>
+                          </ul>
+                          </div>
+                    </div>
+                    <div class="col-xxl-3 col-xl-4">
+                        <div class="pricingtable active">
+                            <div class="price-head">
+                                <div class="price-head__text">
+                                    <h6>Pro</h6>
+                                </div>
+                                <div class="price-head__badge">
+                                    <span class="badge text-primary bg-white">Save 40%</span>
+                                </div>
+                            </div>
+                            <ul class="list-group list-unstyled">
+                                <li>
+                                    <span>
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Workspace Table view</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited storage up to (10MB/file)</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> 1 Power-Up per board</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited activity log</li>
+                                <li class="disable"> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Advanced checklists</li>
+                                <li class="pricingtable__highlight js-montlypricing">$<span>200</span>/Month</li>
+                                <li class="pricingtable__highlight js-yearlypricing">$<span>400</span>/Yearly</li>
+                            <li class="pricingtable__btn">
+                              <button class="btn btn-outline-primary w-100">
+                                Choose Now
+                                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                              </button>
+                            </li>
+                          </ul>
+                          </div>
+                    </div>
+                    <div class="col-xxl-3 col-xl-4">
+                        <div class="pricingtable">
+                            <div class="price-head">
+                                <div class="price-head__text">
+                                    <h6>Enterprise</h6>
+                                </div>
+                            </div>
+                            <ul class="list-group list-unstyled">
+                                <li>
+                                    <span>
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Workspace Table view</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited storage up to (10MB/file)</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> 1 Power-Up per board</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Unlimited activity log</li>
+                                <li> <span>
+                                    
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 4.5L6.75 12.75L3 9" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+        
+                                </span> Advanced checklists</li>
+                                <li class="pricingtable__highlight js-montlypricing">$<span>250</span>/Month</li>
+                                <li class="pricingtable__highlight js-yearlypricing">$<span>500</span>/Yearly</li>
+                            <li class="pricingtable__btn">
+                              <button class="btn btn-outline-primary w-100">
+                                Choose Now
+                                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                              </button>
+                            </li>
+                          </ul>
+                          </div>
+                    </div>
                 </div>
-            {% endfor %}
+            </div>
         </div>
     </div>
 </div>
