landing 4 price complete

--- a/app/partials/pages/landing-3/_price.njk
+++ b/app/partials/pages/landing-3/_price.njk
@@ -23,7 +23,7 @@
             <div class="col-md-12 col-sm-8 col-xs-10 col-11">
                 <div class="row pricing-section-01__wrapper four-row-mobile-slider mobile-slider">
                     <div class="col-xxl-3 col-xl-4">
-                        <div class="pricingtable">
+                        <div class="card-price-01">
                             <div class="price-head">
                                 <div class="price-head__text">
                                     <h6>Intro</h6>
@@ -65,9 +65,9 @@
                                     </svg>
         
                                 </span> Advanced checklists</li>
-                                <li class="pricingtable__highlight js-montlypricing">$<span>50</span>/Month</li>
-                                <li class="pricingtable__highlight js-yearlypricing">$<span>100</span>/Yearly</li>
-                            <li class="pricingtable__btn">
+                                <li class="card-price-01__highlight js-montlypricing">$<span>50</span>/Month</li>
+                                <li class="card-price-01__highlight js-yearlypricing">$<span>100</span>/Yearly</li>
+                            <li class="card-price-01__btn">
                               <button class="btn btn-outline-primary w-100">
                                 Choose Now
                                 <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -79,7 +79,7 @@
                           </div>
                     </div>
                     <div class="col-xxl-3 col-xl-4">
-                        <div class="pricingtable">
+                        <div class="card-price-01">
                             <div class="price-head">
                                 <div class="price-head__text">
                                     <h6>Base</h6>
@@ -121,9 +121,9 @@
                                     </svg>
         
                                 </span> Advanced checklists</li>
-                                <li class="pricingtable__highlight js-montlypricing">$<span>100</span>/Month</li>
-                                <li class="pricingtable__highlight js-yearlypricing">$<span>200</span>/Yearly</li>
-                            <li class="pricingtable__btn">
+                                <li class="card-price-01__highlight js-montlypricing">$<span>100</span>/Month</li>
+                                <li class="card-price-01__highlight js-yearlypricing">$<span>200</span>/Yearly</li>
+                            <li class="card-price-01__btn">
                               <button class="btn btn-outline-primary w-100">
                                 Choose Now
                                 <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -135,7 +135,7 @@
                           </div>
                     </div>
                     <div class="col-xxl-3 col-xl-4">
-                        <div class="pricingtable active">
+                        <div class="card-price-01 active">
                             <div class="price-head">
                                 <div class="price-head__text">
                                     <h6>Pro</h6>
@@ -180,9 +180,9 @@
                                     </svg>
         
                                 </span> Advanced checklists</li>
-                                <li class="pricingtable__highlight js-montlypricing">$<span>200</span>/Month</li>
-                                <li class="pricingtable__highlight js-yearlypricing">$<span>400</span>/Yearly</li>
-                            <li class="pricingtable__btn">
+                                <li class="card-price-01__highlight js-montlypricing">$<span>200</span>/Month</li>
+                                <li class="card-price-01__highlight js-yearlypricing">$<span>400</span>/Yearly</li>
+                            <li class="card-price-01__btn">
                               <button class="btn btn-outline-primary w-100">
                                 Choose Now
                                 <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -194,7 +194,7 @@
                           </div>
                     </div>
                     <div class="col-xxl-3 col-xl-4">
-                        <div class="pricingtable">
+                        <div class="card-price-01">
                             <div class="price-head">
                                 <div class="price-head__text">
                                     <h6>Enterprise</h6>
@@ -236,9 +236,9 @@
                                     </svg>
         
                                 </span> Advanced checklists</li>
-                                <li class="pricingtable__highlight js-montlypricing">$<span>250</span>/Month</li>
-                                <li class="pricingtable__highlight js-yearlypricing">$<span>500</span>/Yearly</li>
-                            <li class="pricingtable__btn">
+                                <li class="card-price-01__highlight js-montlypricing">$<span>250</span>/Month</li>
+                                <li class="card-price-01__highlight js-yearlypricing">$<span>500</span>/Yearly</li>
+                            <li class="card-price-01__btn">
                               <button class="btn btn-outline-primary w-100">
                                 Choose Now
                                 <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
