--- a/app/scss/components/_slider.scss
+++ b/app/scss/components/_slider.scss
@@ -1,3 +1,45 @@
+.testimonial-dots-01 {
+    .slick-dots {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  
+      li {
+          list-style: none;
+          display: flex;
+          align-items: center;
+          margin: 0 6px;
+          
+          button {
+              border: none;
+              list-style: none;
+              width: 10px;
+              height: 10px;
+              padding: 0;
+              border-radius: 500px;
+              background: var(--bs-white)!important;
+              opacity: 0.2;
+              color: transparent;
+              font-size: 0;
+              
+              &:focus {
+                  outline: none;
+                  box-shadow: none;
+              }
+          }
+  
+          &.slick-active {
+              background: var(--bs-white)!important;
+              opacity: 1;
+              width: 8px;
+              height: 8px;
+              border-radius: 500px;
+          }
+      }
+  }
+  }
 .mobile-slider {
     .slick-dots {
       padding: 0;
