testimonila section small fix

--- a/app/partials/pages/landing-4/_testimonial.njk
+++ b/app/partials/pages/landing-4/_testimonial.njk
@@ -1,5 +1,26 @@
 {% macro render(args) %}
     <div class="testimonial-section-04">
+            <div class="testimonial-section-04__image-01">
+                <img src="./image/l-4/t-1.png" alt="user" class="w-100">
+            </div>
+            <div class="testimonial-section-04__image-02">
+                <img src="./image/l-4/t-2.png" alt="user" class="w-100">
+            </div>
+            <div class="testimonial-section-04__image-03">
+                <img src="./image/l-4/t-3.png" alt="user" class="w-100">
+            </div>
+            <div class="testimonial-section-04__image-04">
+                <img src="./image/l-4/t-4.png" alt="user" class="w-100">
+            </div>
+            <div class="testimonial-section-04__quote">
+                <svg class="d-block" width="169" height="148" viewBox="0 0 169 148" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M166.323 71.3984L118.983 71.3984C106.495 71.3984 97.9247 61.9302 97.9247 50.34L97.9247 24.0577C97.9247 12.4675 106.495 2.99984 118.983 2.99985L145.265 2.99985C156.855 2.99985 166.323 12.4675 166.323 24.0578L166.323 71.3984" stroke="white" stroke-opacity="0.05" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M166.323 71.3978C166.323 120.779 157.1 128.94 129.349 145.428" stroke="white" stroke-opacity="0.05" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M71.3984 71.3984L24.0583 71.3984C11.5702 71.3984 2.99985 61.9302 2.99985 50.34L2.99985 24.0577C2.99985 12.4675 11.5702 2.99984 24.0583 2.99985L50.34 2.99985C61.9302 2.99985 71.3984 12.4675 71.3984 24.0578L71.3984 71.3984" stroke="white" stroke-opacity="0.05" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M71.3975 71.3978C71.3975 120.779 62.1745 128.94 34.4233 145.428" stroke="white" stroke-opacity="0.05" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </div>
+            
         <div class="container">
             <div class="row justify-content-center">
                 <div class="section-title-block text-center">
