--- a/app/scss/pages/landing-4/_index.scss
+++ b/app/scss/pages/landing-4/_index.scss
@@ -1,6 +1,9 @@
 @forward "hero";
 @forward "brand";
 @forward "service";
+@forward "content-01";
+@forward "content-02";
+@forward "team";
+@forward "testimonial";
 @forward "price";
 @forward "blog";
-@forward "testimonial";
