--- a/app/scss/pages/landing-4/_team.scss
+++ b/app/scss/pages/landing-4/_team.scss
@@ -1,4 +1,4 @@
-.blog-section-02{
+.team-section-01{
     overflow: hidden;
     padding: 60px 0;
     @media (min-width:575px) {
@@ -7,7 +7,7 @@
     @media (min-width:992px) {
         padding: 130px 0;
     }
-    &__content{
+    .section-title-block{
         margin-bottom: 35px;
         @media (min-width:992px) {
             margin-bottom: 70px;
