--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -492,6 +492,24 @@
       }
     }
   }
+  &--03{
+    text-align: center;
+    padding: 0;
+    background: transparent;
+    .card-img{
+      margin: auto;
+      @include square(70px,3px);
+      @include flexAllCenter;
+      background: var(--bs-primary);
+      margin-bottom: 20px;
+      @media (min-width:992px) {
+        margin-bottom: 30px;
+      }
+      &::before{
+        display: none;
+      }
+    }
+  }
 }
 .testimonial-card-02{
   &__content{
@@ -651,6 +669,87 @@
       font-size: 16px;
       @media (min-width:575px) {
         font-size: 18px;
+      }
+    }
+  }
+}
+.card-team-01{
+  text-align: center;
+  overflow: hidden;
+  .card-img{
+    overflow: hidden;
+    position: relative;
+    img{
+      border-radius: 3px;
+    }
+    .card-social{
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      transition: .3s;
+      right: 0;
+      margin: auto;
+      transform: translateY(100%);
+      ul{
+        justify-content: center;
+        flex-direction: row;
+        margin: 0 -7.5px;
+        li{
+          margin: 0 7.5px;
+          a{
+            display: block;
+            @include square(40px,500px);
+            @include flexAllCenter;
+          background: var(--bs-white);
+          color: var(--bs-primary);
+          }
+        }
+      }
+    }
+    &::before{
+      transition: .3s;
+      transform: translateY(100%);
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(22, 18, 69, 0.85) 100%);
+      border-radius: 3px;
+    }
+  }
+  .card-body{
+    padding: 0;
+    padding-top: 25px;
+    .name{
+    color: var(--bs-black);
+      padding-bottom: 7px;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 1.208333333333333;
+      @media (min-width:575px) {
+        font-size: 24px;
+      }
+    }
+    .position{
+      color: var(--bs-gray);
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 1.277777777777778;
+      @media (min-width:575px) {
+        font-size: 18px;
+      }
+    }
+  }
+  &.active,
+  &:hover{
+    .card-img{
+      .card-social{
+        transform: translateY(-40px);
+      }
+      &::before{
+        transform: translateY(0);
       }
     }
   }
