--- a/app/partials/pages/landing-4/_content-01.njk
+++ b/app/partials/pages/landing-4/_content-01.njk
@@ -1,50 +1,43 @@
 {% macro render(args) %}
-{% import "components/cards.njk" as Card %}
-
-{% set cardData =[
-        {
-        img:"./image/l-4/coffee.svg",
-        title:"Outline Your Business Goal",
-        text:"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."
-        },
-        {
-        img:"./image/l-4/send.svg",
-        title:"Reach Your Right Customer",
-        text:"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."
-        },
-        {
-        img:"./image/l-4/user-check.svg",
-        title:"Get Your Result",
-        text:"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."
-        }
-
-
-]%}
-<div class="content-section-05 bg-white-lilac">
-    <div class="container">
+<div class="content-section-04">
+     <div class="container">
         <div class="row align-items-center justify-content-center">
-            <div class="section-title-block text-center">
-                <h6 class="subtitle text-primary mb-10">Working Process</h6>
-                <h2 class="title">How Does Bestkit Works?</h2>
+            <div class="col-xl-6 col-lg-8 order-xl-2">
+                <div class="content-section-04__image-group">
+                    <img src="./image/l-4/content-1.png" alt="content-img" class="w-100">
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-8 order-xl-1">
+                <div class="content-section-04__content section-content-block">
+                    <h6 class="subtitle text-primary mb-10">Why Choose Bestkit?</h6>
+                    <h2 class="title">We Have Lots Of Experience For
+                        Boost Your Website Traffic</h2>
+                    <div class="content-section-04__content--widget-list content-list-01 pr-xxl-40">
+                        <div class="content-list-wrapper">
+                            <div class="list">1</div>
+                            <div class="content">
+                                <h6>Professional Team Members</h6>
+                                <p>With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build.</p>
+                            </div>
+                        </div>
+                        <div class="content-list-wrapper">
+                            <div class="list">2</div>
+                            <div class="content">
+                                <h6>Increase Your Company Growth</h6>
+                                <p>With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build.</p>
+                            </div>
+                        </div>
+                        <div class="content-list-wrapper">
+                            <div class="list">3</div>
+                            <div class="content">
+                                <h6>24/7 Strong Customer Support</h6>
+                                <p>With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="content-section-05__wrapper">
-                <div class="row card-row justify-content-center">
-                {% for item in cardData%}
-                <div class="col-xl-4 col-lg-5 col-md-6 col-sm-8 col-xs-10">
-                        {{Card.FeatureCard({
-                        modifier:"feature-card--03",
-                        img:item.img,
-                        text:item.text,
-                        title:item.title
-                        })}}
-                </div>
-                {% endfor %}
-                </div>
-                <div class="arrow d-none d-xl-block">
-                        <img src="./image/l-4/m-arrow.png" alt="arrow" class="mw-100">
-                </div>
-        </div>
-    </div>              
+     </div>      
 </div>
 {% endmacro %}
