--- a/app/scss/pages/landing-4/_index.scss
+++ b/app/scss/pages/landing-4/_index.scss
@@ -1,6 +1,8 @@
 @forward "hero";
 @forward "brand";
 @forward "service";
+@forward "about";
+@forward "counter";
 @forward "content-01";
 @forward "content-02";
 @forward "team";
