--- a/app/scss/pages/landing-4/_content-01.scss
+++ b/app/scss/pages/landing-4/_content-01.scss
@@ -1,8 +1,8 @@
 @use  "../../abstracts/mixins" as *;
 .content-section-04{
-    padding: 60px 0;
+    padding-bottom: 60px;
     @media (min-width:575px) {
-        paddinp: 80px 0;
+       padding-bottom: 80px;
     }
     @media (min-width:992px) {
         padding: 130px 0;
