setup landing page 5 and hero and header complete

--- a/app/partials/components/Header/_header.njk
+++ b/app/partials/components/Header/_header.njk
@@ -54,6 +54,9 @@ Available variables
           <a href="index.html">
 
             <!-- light version logo (logo must be black)-->
+            <img src="{{ settings.root }}image/logo/logo-dark-white.png" alt="logo" class="logo-white-black">
+
+            <!-- light version logo (logo must be black)-->
             <img src="{{ settings.root }}image/logo/logo-dark.png" alt="logo" class="logo-white">
 
             <!-- Dark version logo (logo must be White)-->
